fix(navbar): Add background to navbar when scroll to increase navbar visibility

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -406,13 +406,6 @@
   }
 }
 
-.header--secondary.header-active {
-  background-color: transparent;
-  .nav {
-    border-bottom: 1px solid transparent;
-  }
-}
-
 /* ==== 
  --------- (4.1) header styles end ---------
  ==== */
